# src/routes/storyArcRoutes.js
@@ -24,8 +24,34 @@ router.get(
 router.post(
   '/',
   /* #swagger.tags = ['Story Arc']
-    #swagger.path = '/api/story-arc'
-    */
+     #swagger.path = '/api/story-arc'
+     #swagger.requestBody = {
+        required: true,
+        content: {
+          "application/json": {
+            schema: {
+              type: "object",
+              properties: {
+                title: { type: "string", example: "The Dark Saga" },
+                description: { type: "string", example: "A long and epic arc..." },
+                mainCharacters: {
+                  type: "array",
+                  items: { type: "string" },
+                  example: ["Hero", "Villain"]
+                },
+                startIssue: { type: "number", example: 1 },
+                endIssue: { type: "number", example: 10 },
+                status: {
+                  type: "string",
+                  example: "Ongoing"
+                }
+              },
+              required: ["title", "description"]
+            }
+          }
+        }
+     }
+  */
     ensureAuthenticated,
     validators.create,
     storyArcController.createStoryArc
@@ -34,8 +60,39 @@ router.post(
 router.put(
   '/:id',
   /* #swagger.tags = ['Story Arc']
-    #swagger.path = '/api/story-arc'
-    */
+     #swagger.path = '/api/story-arc/{id}'
+     #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'Story Arc ID',
+        required: true,
+        type: 'string'
+     }
+     #swagger.requestBody = {
+        required: true,
+        content: {
+          "application/json": {
+            schema: {
+              type: "object",
+              properties: {
+                title: { type: "string", example: "Updated Saga Title" },
+                description: { type: "string", example: "Updated description..." },
+                mainCharacters: {
+                  type: "array",
+                  items: { type: "string" },
+                  example: ["Hero", "New Villain"]
+                },
+                startIssue: { type: "number", example: 2 },
+                endIssue: { type: "number", example: 12 },
+                status: {
+                  type: "string",
+                  example: "Completed"
+                }
+              }
+            }
+          }
+        }
+     }
+  */
     ensureAuthenticated,
     validators.update,
     storyArcController.updateStoryArc
@@ -44,8 +101,14 @@ router.put(
 router.delete(
   '/:id',
   /* #swagger.tags = ['Story Arc']
-    #swagger.path = '/api/story-arc'
-    */
+     #swagger.path = '/api/story-arc/{id}'
+     #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'Story Arc ID',
+        required: true,
+        type: 'string'
+     }
+  */
     ensureAuthenticated,
     validators.delete,
     storyArcController.deleteStoryArc
